# subtitle-forge

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  index.html  package.json
.github/workflows/: release.yml
bugfix-md/: bugfix-1.md
scripts/: init-linux.sh  init-macos.sh  init-windows.bat  tauri-preflight.mjs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  log_layer.rs  main.rs
src-tauri/src/asr/: capabilities.rs  engine.rs  mod.rs  models.rs  vad.rs  whisper.rs
src-tauri/src/audio/: extractor.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/pipeline/: mod.rs  orchestrator.rs  progress.rs
src-tauri/src/subtitle/: ass.rs  merger.rs  mod.rs  srt.rs  types.rs  vtt.rs
src-tauri/src/translate/: core.rs  deepl.rs  engine.rs  factory.rs  google.rs  libre.rs  llm_api.rs  middleware.rs  mod.rs  offline.rs  ollama.rs  plugin.rs  shared.rs
src-tauri/src/translate/services/: mod.rs
src-tauri/src/translate/services/embedded_llm/: llama_cpp.rs  mod.rs  models.rs
src-tauri/src/translate/services/local_llm/: ollama.rs
src-tauri/src/translate/services/online_llm/: ark.rs  deepseek.rs  mod.rs
src-tauri/src/translate/services/online_translate/: deepl.rs  google.rs  libretranslate.rs  mod.rs
src/components/: FileDropZone.tsx  LanguageSelector.tsx  LogPanel.tsx  ProgressPanel.tsx  SettingsDialog.tsx  SubtitlePreview.tsx
src/hooks/: useLogs.ts  usePipeline.ts
src/styles/: globals.css
src/types/: appConfig.ts  translation.ts
