[package]
name = "subtitle-forge"
version = "0.1.0"
edition = "2021"
description = "Cross-platform bilingual subtitle generator powered by Tauri + Rust"
authors = ["SubtitleForge Team"]
license = "MIT"

[lib]
name = "subtitle_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Audio processing
ffmpeg-next = "7"

# ASR
whisper-rs = "0.12"

# Translation (online)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Translation (offline - optional)
ort = { version = "2", optional = true }
tokenizers = { version = "0.19", optional = true }

# Utilities
num_cpus = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["online-translate"]
online-translate = []
offline-translate = ["ort", "tokenizers"]
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
